--- a/src/index.css
+++ b/src/index.css
@@ -1,78 +1,78 @@
 @import "tailwindcss";
 
-@plugin "tailwindcss-animate";
+@plugin 'tailwindcss-animate';
 
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --destructive-foreground: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --radius: 0.625rem;
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --background: oklch(100% 0 0);
+  --foreground: oklch(13.71% 0.036 258.53);
+  --card: oklch(100% 0 0);
+  --card-foreground: oklch(13.71% 0.036 258.53);
+  --popover: oklch(100% 0 0);
+  --popover-foreground: oklch(13.71% 0.036 258.53);
+  --primary: oklch(54.6% 0.2153 262.87);
+  --primary-foreground: oklch(98.38% 0.0035 247.86);
+  --secondary: oklch(96.84% 0.0068 247.9);
+  --secondary-foreground: oklch(20.79% 0.0399 265.73);
+  --muted: oklch(96.84% 0.0068 247.9);
+  --muted-foreground: oklch(55.47% 0.0407 257.44);
+  --accent: oklch(96.84% 0.0068 247.9);
+  --accent-foreground: oklch(20.79% 0.0399 265.73);
+  --destructive: oklch(63.68% 0.2078 25.33);
+  --destructive-foreground: oklch(98.38% 0.0035 247.86);
+  --border: oklch(92.9% 0.0126 255.53);
+  --input: oklch(92.9% 0.0126 255.53);
+  --ring: oklch(54.6% 0.2153 262.87);
+  --radius: 0.5rem;
+  --chart-1: oklch(67.72% 0.1571 35.19);
+  --chart-2: oklch(63.09% 0.1013 183.49);
+  --chart-3: oklch(37.87% 0.044 225.54);
+  --chart-4: oklch(83.36% 0.1186 88.15);
+  --chart-5: oklch(78.34% 0.1261 58.75);
+  --sidebar: oklch(98.38% 0.0035 247.86);
+  --sidebar-foreground: oklch(13.71% 0.036 258.53);
+  --sidebar-primary: oklch(54.6% 0.2153 262.87);
+  --sidebar-primary-foreground: oklch(98.38% 0.0035 247.86);
+  --sidebar-accent: oklch(96.84% 0.0068 247.9);
+  --sidebar-accent-foreground: oklch(20.79% 0.0399 265.73);
+  --sidebar-border: oklch(92.9% 0.0126 255.53);
+  --sidebar-ring: oklch(54.6% 0.2153 262.87);
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.145 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.145 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.985 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.396 0.141 25.723);
-  --destructive-foreground: oklch(0.637 0.237 25.331);
-  --border: oklch(0.269 0 0);
-  --input: oklch(0.269 0 0);
-  --ring: oklch(0.439 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(0.269 0 0);
-  --sidebar-ring: oklch(0.439 0 0);
+  --background: oklch(13.71% 0.036 258.53);
+  --foreground: oklch(98.38% 0.0035 247.86);
+  --card: oklch(13.71% 0.036 258.53);
+  --card-foreground: oklch(98.38% 0.0035 247.86);
+  --popover: oklch(13.71% 0.036 258.53);
+  --popover-foreground: oklch(98.38% 0.0035 247.86);
+  --primary: oklch(62.32% 0.1879 259.8);
+  --primary-foreground: oklch(20.79% 0.0399 265.73);
+  --secondary: oklch(28% 0.0369 259.97);
+  --secondary-foreground: oklch(98.38% 0.0035 247.86);
+  --muted: oklch(28% 0.0369 259.97);
+  --muted-foreground: oklch(71.07% 0.0351 256.79);
+  --accent: oklch(28% 0.0369 259.97);
+  --accent-foreground: oklch(98.38% 0.0035 247.86);
+  --destructive: oklch(39.59% 0.1331 25.72);
+  --destructive-foreground: oklch(98.38% 0.0035 247.86);
+  --border: oklch(28% 0.0369 259.97);
+  --input: oklch(28% 0.0369 259.97);
+  --ring: oklch(48.78% 0.217 264.39);
+  --chart-1: oklch(52.92% 0.1931 262.13);
+  --chart-2: oklch(69.83% 0.1337 165.46);
+  --chart-3: oklch(72.32% 0.15 60.63);
+  --chart-4: oklch(61.92% 0.2037 312.73);
+  --chart-5: oklch(61.23% 0.2093 6.39);
+  --sidebar: oklch(20.79% 0.0399 265.73);
+  --sidebar-foreground: oklch(98.38% 0.0035 247.86);
+  --sidebar-primary: oklch(62.32% 0.1879 259.8);
+  --sidebar-primary-foreground: oklch(20.79% 0.0399 265.73);
+  --sidebar-accent: oklch(28% 0.0369 259.97);
+  --sidebar-accent-foreground: oklch(98.38% 0.0035 247.86);
+  --sidebar-border: oklch(28% 0.0369 259.97);
+  --sidebar-ring: oklch(48.78% 0.217 264.39);
 }
 
 @theme inline {
@@ -123,5 +123,8 @@
   }
   button, [role="button"] {
     cursor: pointer;
+  }
+  :disabled {
+    cursor: default;
   }
 }
