--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@
   --muted-foreground: oklch(71.07% 0.0351 256.79);
   --accent: oklch(28% 0.0369 259.97);
   --accent-foreground: oklch(98.38% 0.0035 247.86);
-  --destructive: oklch(39.59% 0.1331 25.72);
+  --destructive: oklch(63.56% 0.2082 25.38);
   --destructive-foreground: oklch(98.38% 0.0035 247.86);
   --border: oklch(28% 0.0369 259.97);
   --input: oklch(28% 0.0369 259.97);
@@ -121,7 +121,8 @@
   body {
     @apply bg-background text-foreground;
   }
-  button, [role="button"] {
+  button,
+  [role="button"] {
     cursor: pointer;
   }
   :disabled {
