--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,8 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  --color-dark-background: oklch(13.71% 0.036 258.53);
 }
 
 @layer base {
